fix(views/settings): Fix layout wrapping & margins

--- a/src/views/settings/styles.scss
+++ b/src/views/settings/styles.scss
@@ -6,75 +6,64 @@ $card__margin-y: 2 * $base__size;
 @mixin card__width--100 {
   margin-right: 0;
   min-width: 450px;
-  width: calc(100%);
+  width: calc(100% - #{$card__margin-x});
 }
 
 @mixin card__width--50 {
-  width: calc(50% - #{0.5 * $card__margin-x});
+  width: calc(50% - #{$card__margin-x});
+  margin-right: $card__margin-x;
 }
 
 @mixin card__width--25 {
-  width: calc(25% - #{0.75 * $card__margin-x});
+  width: calc(25% - #{$card__margin-x});
+  margin-right: $card__margin-x;
 }
 
-.settings-view {
-  &__cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: $card__margin-y;
-    margin-top: -1 * $card__margin-y;
+.settings-view__cards-container {
+  margin-bottom: $card__margin-y;
+  margin-top: -1 * $card__margin-y;
+  margin-right: -1 * $card__margin-x;
+}
+
+.settings-view__card {
+  float: left;
+  margin-top: $card__margin-y;
+
+  .card__body {
+    padding: 0;
   }
 
-  &__card {
-    margin-top: $card__margin-y;
-
-    &:not(:last-of-type) {
-      margin-right: $card__margin-x;
+  @media screen and (min-width: 1201px) {
+    &#{&}--sm {
+      @include card__width--25;
     }
 
-    @media screen and (min-width: 1201px) {
-      &#{&}--sm {
-        @include card__width--25;
-      }
-
-      &#{&}--md {
-        @include card__width--50;
-      }
-    }
-
-    @media screen and (min-width: 601px) and (max-width: 1200px) {
-      &#{&}--sm {
-        @include card__width--50;
-      }
-
-      &#{&}--md {
-        @include card__width--100;
-      }
-    }
-
-    @media screen and (max-width: 600px) {
-      &#{&}--sm,
-      &#{&}--md {
-        @include card__width--100;
-      }
-    }
-
-    .card__body {
-      padding: 0;
+    &#{&}--md {
+      @include card__width--50;
     }
   }
 
-  &__list-item {
-    &--details {
-      margin-left: 0.5 * $base__size;
-      color: $color__darker-gray;
+  @media screen and (min-width: 601px) and (max-width: 1200px) {
+    &#{&}--sm {
+      @include card__width--50;
+    }
+
+    &#{&}--md {
+      @include card__width--100;
     }
   }
 
-  &__button-panel {
-    .btn:not(:first-child) {
-      margin-left: $base__size;
+  @media screen and (max-width: 600px) {
+    &#{&}--sm,
+    &#{&}--md {
+      @include card__width--100;
     }
+  }
+}
+
+.settings-view__button-panel {
+  .btn:not(:first-child) {
+    margin-left: $base__size;
   }
 }
 
